Added all idpoor changes into this branch

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,13 @@
   ],
   "files": [
     "src/custom.d.ts"
-  ]
+  ],
+  "ts-node": {
+    "compilerOptions": {
+      "module": "commonjs",
+      "types": [
+        "node"
+      ]
+    }
+  }
 }
