Add pdf preview modal for reports

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "chart.js": "^2.9.3",
     "colormap": "^2.3.1",
     "comlink": "^4.3.1",
+    "customize-cra": "^1.0.0",
     "d3-fetch": "^1.1.2",
     "date-fns": "^2.28.0",
     "domhandler": "^4.2.2",
@@ -98,20 +99,20 @@
     "prettier": "2.0.5",
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
+    "react-app-rewired": "^2.2.1",
     "react-chartjs-2": "^2.9.0",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.0",
     "react-draggable": "^4.4.3",
     "react-i18next": "^11.15.4",
     "react-mapbox-gl": "^4.8.2",
+    "react-pdf": "^5.7.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
     "reflect-metadata": "^0.1.13",
     "remove-files-webpack-plugin": "^1.5.0",
-    "customize-cra": "^1.0.0",
-    "react-app-rewired": "^2.2.1",
     "typescript": "^3.9.7",
     "url": "^0.11.0",
     "xml-js": "^1.6.11"
@@ -151,6 +152,7 @@
     "@types/react": "^16.9.0",
     "@types/react-datepicker": "^2.11.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-pdf": "^5.7.2",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "cross-env": "^7.0.2",
